<resources>
    <string name="app_name">University App</string>
    <string name="welcome_message">Welcome to University App</string>
    <string name="login_button">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Login Failed. Try \'admin\' / \'1234\'</string>
    <string name="logout">Logout</string>
    <string name="menu_theme">Change Theme</string>
    <string name="menu_refresh">Refresh</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_custom">Custom</string>
    <string name="no_internet">No Internet Connection. Loading offline data...</string>
    <string name="offline_data_loaded">Offline Data Loaded</string>
    <string name="no_data">No Data Available</string>
    <string name="item_details">Item Details</string>
    <string name="more_info">More Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
